# revolver

./: .gitignore  README.md  config.yaml  revolver.cabal  stack.yaml
src/: Revolver.hs
src/Revolver/: ConfigParser.hs  Consumer.hs  Logger.hs  StatSender.hs
